--- a/src/index.html
+++ b/src/index.html
@@ -9,32 +9,15 @@
 <body>
   <div class="container">
   <div class="column todo">
-    <div class="card">
-      <button class="close"></button>
-      <p class="text">cat</p>
-    </div>
-    <div class="card">
-      <button class="close"></button>
-      <p class="text">dog</p>
-    </div>
+    <h2 class="column-name">TODO</h1>
     <div class="add-button">+ add another card</div>
   </div>
   <div class="column progress">
-    <div class="card">
-      <button class="close"></button>
-      <p class="text">tiger</p>
-      </div>
-    <div class="card">
-      <button class="close"></button>
-      <p class="text">elephant</p>
-      </div>
+    <h2 class="column-name">IN PROGRESS</h1>
     <div class="add-button">+ add another card</div>
   </div>
   <div class="column done">
-    <div class="card">
-      <button class="close"></button>
-      <p class="text">zebra</p>
-    </div>
+    <h2 class="column-name">DONE</h1>
     <div class="add-button">+ add another card</div>
   </div>
   </div>
