--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <div class="container">
   <div class="column todo">
     <h2 class="column-name">TODO</h1>
-    <div class="add-button">+ add another card</div>
+    <div class="add-button">+ add another card.</div>
   </div>
   <div class="column progress">
     <h2 class="column-name">IN PROGRESS</h1>
